--- a/estilos/style.css
+++ b/estilos/style.css
@@ -17,8 +17,15 @@ body {
     /* --- FIN PROPIEDADES DE LA IMAGEN DE FONDO --- */
 }
 
+
+
+
+
+
+
 .container {
     border: solid red 2px;
+    text-align: center;
    
     margin-left: 5%;
     margin-right: 5%;
@@ -30,6 +37,14 @@ body {
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3); 
     min-height: calc(100vh - 80px); 
 }
+
+
+#numeroMuestra , #localidad, #pais , #latitud , #longitud , #mineralogia , #paleontologia, #mapLatitud , #mapLongitud{
+    width: 40%; 
+
+}
+
+
 
 h1 {
     text-align: center;
@@ -145,6 +160,7 @@ button[type="submit"]:hover {
 
 /* Botón Ver en Mapa */
 .btn-mapa {
+    color: #333;
     background-color: #00c763; /* Verde para el mapa */
     font-size: clamp(16px,3.5vw,32px);
 }
